Tue May 11 00:38:25 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellrenderertoggle.c (gtk_cell_renderer_toggle_class_init): 
	Document the ::toggled signal.

Mon May 10 23:04:25 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkwidget.h: Add prototype for _gtk_widget_grab_notify()

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwindow.c (get_screen_icon_info): Make static.

	* gdk/gdkdisplay.c (singlehead_...): 
	* gdk/x11/gdkkeys-x11.c (get_effective_keymap): 
	* gdk/x11/gdkgeometry-x11.c (expose_serial_predicate): 
	* gdk/x11/gdkdisplay-x11.c (escape_for_xmessage): Make static.

	* gtk/gtktreeview.c (gtk_tree_view_set_fixed_height_mode): Add a 
	note about COLUMN_FIXED restriction.

	* gtk/gtkentrycompletion.c (gtk_entry_completion_list_button_press): 
	Set the entry in the default handler of the ::match-selected signal.
	(#137226)

	* gtk/gtkcombobox.c (gtk_combo_box_menu_position_below): If we don't
	do the move-selected-item below pointer thingie, do the 
	place-below-or-above one.

	* tests/testentrycompletion.c: Make the second example use the 
	::match-selected signal to make it actually work.

	* gtk/gtkentrycompletion.c (gtk_entry_completion_init): 
	* gtk/gtkcombobox.c (gtk_combo_box_list_setup): Use hover selection
	mode.  (#127648, Dave Bordoley)

	* gtk/gtktreeview.h:
	* gtk/gtktreeview.c: Add a new property "hover_selection", which 
	when TRUE makes the selection follow the mouse. Also add setter
	and getter for the fixed_height property.

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_popup) 
	(gtk_combo_box_menu_button_press): Make sure the menu pops up
	as wide as the combobox.  (#59660, Havoc Pennington)

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.h: 
	* gtk/gtkcombobox.c: Support tearoffable combo boxes (in menu 
	mode). Add a new property, add-tearoffs, for this.  (#135956)

	* gtk/gtkfontsel.c (list_row_activated): Make Return activate the